@@ -1,3 +1,6 @@
+Zmiany w QMPlay2 build 15.05.29:
+	- poprawa operacji na katalogach,
+
 Zmiany w QMPlay2 build 15.05.10:
 	- poprawa wyszukiwania w YouTube,
 
